--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue": "^2.5.17"
     },
     "dependencies": {
+        "moment": "^2.24.0",
         "vue-router": "^3.0.2",
         "vuex": "^3.1.0"
     }
