--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
         "laravel-mix": "^4.0",
         "lodash": "^4.17.11",
         "popper.js": "^1.15",
-        "vue": "^2.6.10"
+        "resolve-url-loader": "2.3.1",
+        "sass": "1.19.0",
+        "sass-loader": "7.*",
+        "vue": "^2.6.10",
+        "vue-template-compiler": "2.6.10"
     },
     "dependencies": {
         "vue-router": "^3.0.6"
