--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
         "vue-template-compiler": "2.6.10"
     },
     "dependencies": {
+        "luxon": "1.12.1",
         "moment": "^2.24.0",
+        "vue-datetime": "1.0.0-beta.10",
         "vue-router": "^3.0.2",
-        "vuex": "^3.1.0"
+        "vuex": "^3.1.0",
+        "weekstart": "1.0.0"
     }
 }
