--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "dependencies": {
         "luxon": "1.12.1",
         "moment": "^2.24.0",
+        "v-money": "^0.8.1",
         "vue-datetime": "1.0.0-beta.10",
         "vue-router": "^3.0.2",
+        "vue2-filters": "^0.6.0",
         "vuex": "^3.1.0",
         "weekstart": "1.0.0"
     }
