--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.18",
-        "bootstrap": "^4.0.0",
+        "axios": "^0.19.0",
+        "bootstrap": "^4.3.1",
         "cross-env": "^5.1",
-        "jquery": "^3.2",
+        "jquery": "^3.4.1",
         "laravel-mix": "^2.0",
         "lodash": "^4.17.5",
         "popper.js": "^1.12",
         "vue": "^2.5.17"
     },
     "dependencies": {
+        "vue-datepicker": "^1.3.0",
+        "vue-material-datepicker": "^2.0.1",
         "vue-router": "^3.0.2",
+        "vuejs-datepicker": "^1.6.2",
         "vuex": "^3.1.0"
     }
 }
