--- a/.env.example
+++ b/.env.example
@@ -26,8 +26,8 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_USERNAME=42eb0c219819e4
+MAIL_PASSWORD=bb2da9bb1fb64e
 MAIL_ENCRYPTION=null
 
 PUSHER_APP_ID=
